[project]
name = "general_utils"
version = "1.0.2"
description = "Python Repository with general utilities"
authors = [
    { name = "Hoang", email = "hoanglexuan5@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1.0",
    "loguru>=0.7.3",
    "memoization>=0.4.0",
    "pydantic[email]>=2.11.3",
    "pydantic-settings>=2.9.1",
    "ruamel-yaml>=0.18.10",
    "ruff>=0.12.4",
    "redis>=6.4.0",
    "fastapi>=0.116.1",
]

[project.optional-dependencies]
trace = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.15.0",
]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    "UP045",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
    "D100",
    "D101",
    "D200",
    # "D102", # undocumented-public-method
    # "D103", # undocumented-public-function
    "D104",
    "T201", # Allow print statements
    "D212", # Multi-line docstring summary should start at the first line,
    "D401", # First line should be in imperative mood
    "D106", # Missing docstring in public nested class
    "D205", # missing-blank-line-after-summary
]
exclude = ["*.ipynb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
